<?php

declare(strict_types=1);

namespace App\CRM\Lead\Service\Command;

class CreateLeadService
{
    public function __construct()
    {
    }
}
