<?php

declare(strict_types=1);

namespace App\CRM\Lead\Service\Query;

class LeadQueryService
{
    public function __construct()
    {
    }
}
