@startuml Domain Structure
!theme plain
skinparam packageStyle rectangle

package "CRM Domain" {

  package "Lead" #E8F5E9 {
    class Lead {
      -id: int
      -title: string
      -contactId: int
      -status: string
      +markAsQualified()
      +markAsConverted()
    }

    class LeadRepository {
      +save(Lead)
      +findByStatus(string)
    }

    package "Service" {
      class CreateLeadService {
        +create(title, contactId)
      }
      class ConvertLeadService {
        +convert(leadId, amount)
      }
      class LeadQueryService {
        +findById(id)
        +findAll()
      }
    }
  }

  package "Contact" #E3F2FD {
    class Contact {
      -id: int
      -firstName: string
      -lastName: string
      -email: Email
      +getFullName()
    }

    class ContactRepository {
      +save(Contact)
      +findByEmail(string)
    }

    class ContactService {
      +create(firstName, lastName, email)
    }

    class Email <<ValueObject>> {
      -value: string
      +equals(Email)
    }
  }

  package "Deal" #FFF9C4 {
    class Deal {
      -id: int
      -title: string
      -amount: Money
      -contactId: int
    }

    class Money <<ValueObject>> {
      -amount: int
      -currency: string
    }
  }
}

' Relationships
CreateLeadService --> LeadRepository : uses
CreateLeadService --> ContactService : validates contact
ConvertLeadService --> LeadRepository : uses
ConvertLeadService ..> Deal : creates
LeadQueryService --> LeadRepository : queries

Lead --> "contactId" Contact : references by ID
Deal --> "contactId" Contact : references by ID

Contact *-- Email : contains
Deal *-- Money : contains

note right of Lead
  Leads reference Contacts by ID,
  not by object reference.
  This maintains loose coupling.
end note

note bottom of Email
  Value Objects are immutable
  and defined by their value
end note

@enduml